--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,5 @@ include ':app'
 include ':watermelondb'
 project(':watermelondb').projectDir =
     new File(rootProject.projectDir, '../node_modules/@nozbe/watermelondb/native/android')
+include ':react-native-vector-icons'
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
