--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 28
-        kotlin_version = '1.3.21'
+        ext.kotlin_version = '1.3.21'
     }
     repositories {
         google()
